--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -1259,10 +1259,10 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-6" style="text-align: right">
-                                        <a href="https://latinchain.pinet.com/pinetwork" target="_blank" class="btn btn-success rounded MainnetLink" style="border: 2px solid black; color: white !important;">Pay Pi</a>
+                                        <a href="https://latinchain.pinet.com/pinetwork" target="_blank" class="btn btn-success rounded MainnetLink" style="border: 2px solid black;">Pay Pi</a>
                                     </div>
                                     <div class="col-6" style="text-align: left">
-                                        <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Boost Rank</a>
+                                        <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-success rounded" style="border: 2px solid black;">Boost Rank</a>
                                     </div>
                                 </div>
                             </div>
@@ -1274,10 +1274,10 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-6" style="text-align: right">
-                                        <a href="https://latinchain.pinet.com/pinetwork" target="_blank" class="btn btn-success rounded MainnetLink" style="border: 2px solid black; color: white !important;">Pay Pi</a>
+                                        <a href="https://latinchain.pinet.com/pinetwork" target="_blank" class="btn btn-success rounded MainnetLink" style="border: 2px solid black;">Pay Pi</a>
                                     </div>
                                     <div class="col-6" style="text-align: left">
-                                        <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Boost Rank</a>
+                                        <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-success rounded" style="border: 2px solid black;">Boost Rank</a>
                                     </div>
                                 </div>
                             </div>
@@ -1291,10 +1291,10 @@
                                 </div>
                                 <div class="row">
                                     <div class="col-6" style="text-align: right">
-                                        <a href="https://latinchain.pinet.com/pinetwork" target="_blank" class="btn btn-success rounded MainnetLink" style="border: 2px solid black; color: white !important;">Mainnet</a>
+                                        <a href="https://latinchain.pinet.com/pinetwork" target="_blank" class="btn btn-success rounded MainnetLink" style="border: 2px solid black;">Mainnet</a>
                                     </div>
                                     <div class="col-6" style="text-align: left">
-                                        <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-success rounded" style="border: 2px solid black; color: white !important;">Boost Rank</a>
+                                        <a href="https://ecosystem.pinet.com/apps/62e0897afd5e7a022ac34e5a" target="_blank" class="btn btn-success rounded" style="border: 2px solid black;">Boost Rank</a>
                                     </div>
                                 </div>
                             </div>
@@ -2051,7 +2051,7 @@
                                                 <button id="button_click" name="button_click" class="btn btn-success" disabled="true">Save</button>-->
                                                 None prize will be paid by now, but you can play anytime!. And we are incorporating the price of the market for Pi.<br/><br/>
                                                 Here you can watch your incoming and outgoing transactions:<br/>
-                                                <a href="/get-transactions/" class="btn btn-success font-weight-bold text-white border-success" style="border: 2px solid;"><div style="color: white !important"><i class="fa fa-list-ol"></i></div><div style="font-size:100%; color: white !important">Transactions</div><div style="font-size:80%; color: white !important">Transactions list</div></a>
+                                                <a href="/get-transactions/" class="btn btn-success font-weight-bold text-white border-success" style="border: 2px solid;"><div style=""><i class="fa fa-list-ol"></i></div><div style="font-size:100%;">Transactions</div><div style="font-size:80%;">Transactions list</div></a>
                                                 <div>
                                                 <br/>
                                                 Read the Rules:<br/>
