--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -63,14 +63,14 @@
                         /*word-spacing: 2px !important;
                         letter-spacing: 2px !important;*/
                         text-shadow: 
-                            -1px -1px 0px silver,
-                             0px -1px 0px silver,
-                             1px -1px 0px silver,
-                            -1px  0px 0px silver,
-                             1px  0px 0px silver,
-                            -1px  1px 0px silver,
-                             0px  1px 0px silver,
-                             1px  1px 0px silver;
+                            -1px -1px 0px white,
+                             0px -1px 0px white,
+                             1px -1px 0px white,
+                            -1px  0px 0px white,
+                             1px  0px 0px white,
+                            -1px  1px 0px white,
+                             0px  1px 0px white,
+                             1px  1px 0px white;
                     }
                     
                     .btn *
