--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -3242,7 +3242,7 @@
                                         <i class="fa-solid fa-plus"></i>
                                     </div>
                                     <h5 style="color: black !important">
-                                        MORE OPTIONS
+                                        SHOW MORE
                                     </h5>
                                 </div>
                                 <div class="showOptions" style="display:none;">
