--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -3261,6 +3261,14 @@
                                     <div style="margin-top: 10px;" class="row">
                                         <a class="logout_latinchain btn btn-dark rounded col-12" style="border: 2px solid black; font-weight: bold;" href="#">Logout</a>
                                     </div>
+                                    <div class="text-black" onClick="$('.showOptions').hide(); $('.showMoreOptions').show();" style="text-align: center; margin-top: 10px; cursor: pointer; color: black !important">
+                                        <div style="">
+                                            <i class="fa-solid fa-minus"></i>
+                                        </div>
+                                        <h5 style="color: black !important">
+                                            SHOW LESS
+                                        </h5>
+                                    </div>
                                 </div>
                             </div>
                             <div id="loading-message" style="display: block; margin-top: auto;">
