--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -3228,12 +3228,12 @@
                                     <a class="anchor-click" style="color: blue !important;" href="#" target="_blank">Click here</a>
                                 </div>
                             </div>
-                            <div id="paying-message" class="container justify-content-center text-center" style="display: none; flex-direction: column; margin-top: auto; text-align: center;">
-                                <div style="" class="row">
-                                    <h3 t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" style="color: black !important; font-weight:600; text-align: center;">LatinChain Mainnet</h3>
-                                    <h3 t-else="" style="color: black !important; font-weight:600; text-align: center;">LatinChain Testnet</h3>
+                            <div id="paying-message" class="container justify-content-center text-center" style="display: flex; flex-direction: column; margin-top: auto; text-align: center;">
+                                <div style="text-align: center;" class="row justify-content-center text-center">
+                                    <h3 t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" style="color: black !important;"><strong>LatinChain Mainnet</strong></h3>
+                                    <h3 t-else="" style="color: black !important;"><strong>LatinChain Testnet</strong></h3>
                                 </div>
-                                <div style="" class="row">
+                                <div class="row">
                                     <a t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" id="PayPiLinkId1" class="PayPiLink btn btn-dark rounded col-12" style="border: 2px solid black; font-weight: bold;" href="https://latinchain.pinet.com/pinetwork" target="_blank">Unlock Screen (Click here)</a>
                                     <a t-else="" id="PayPiLinkId1" class="PayPiLink btn btn-dark rounded col-12" style="border: 2px solid black; font-weight: bold;" href="https://latinchaintest9869.pinet.com/pinetwork" target="_blank">Unlock Screen (Click here)</a>
                                 </div>
