--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -3228,7 +3228,7 @@
                                     <a class="anchor-click" style="color: blue !important;" href="#" target="_blank">Click here</a>
                                 </div>
                             </div>
-                            <div id="paying-message" class="container justify-content-center text-center" style="display: flex; flex-direction: column; margin-top: auto; text-align: center;">
+                            <div id="paying-message" class="container justify-content-center text-center" style="display: none; flex-direction: column; margin-top: auto; text-align: center;">
                                 <div style="text-align: center;" class="row justify-content-center text-center">
                                     <h3 t-if="mainnet in ['Mainnet ON', 'Mainnet OFF']" style="color: black !important;"><strong>LatinChain Mainnet</strong></h3>
                                     <h3 t-else="" style="color: black !important;"><strong>LatinChain Testnet</strong></h3>
