--- a/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
+++ b/website_pinetwork_games_odoo/views/website_pinetwork_templates_mainpage.xml
@@ -976,7 +976,7 @@
                     
                     <!--<script src="/website_pinetwork_odoo/static/src/js/common_functions.js?v=1.107"></script>-->
                     
-                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.911"></script>
+                    <script type="text/javascript" src="/website_pinetwork_games_odoo/static/src/js/functions_mainscreen.js?v=1.912"></script>
                     
                     <!--<script t-if="mainnet in ['Testnet ON', 'Testnet OFF'] and nopopup" async="true" t-att-src="google_adsense" crossorigin="anonymous"></script>
                     -->
@@ -3213,6 +3213,28 @@
                             <button type="button" class="btn btn-secondary" id="login_latinchain_on_message" data-bs-dismiss="modal">Login</button>
                             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Just Browse</button>
                             <!--<button type="button" class="btn btn-primary">Save changes</button>-->
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    
+                    <!-- Button trigger modal -->
+                    <button id="open_modal_specs" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#ModalSpecs" style="display: none;">
+                      Open Modal
+                    </button>
+
+                    <!-- Modal -->
+                    <div class="modal fade" id="ModalSpecs" tabindex="-1" aria-labelledby="ModalLabelSpecs" aria-hidden="true" style="text-align:center; z-index: 9999999 !important;">
+                      <div class="modal-dialog">
+                        <div class="modal-content">
+                          <div class="modal-header">
+                            <h5 class="modal-title" id="ModalLabelSpecs">Message</h5>
+                            <button type="button" class="btn-close" style="background-color:white !important; color:black !important; filter: contrast(100%) !important;" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-xmark"></i></button>
+                            <!--<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">X</button>-->
+                          </div>
+                          <div class="modal-body-specs">
+                          </div>
+                          <div class="modal-footer button-group">
                           </div>
                         </div>
                       </div>
